name:                mixxxcsvlist
version:             0.1.0.0
synopsis:            Generate nicely formatted set-lists from Mixxx CSV playlist output
homepage:            https://github.com/relrod/mixxxcsvlist
license:             BSD2
license-file:        LICENSE
author:              Ricky Elrod
maintainer:          ricky@elrod.me
copyright:           (c) 2015 Ricky Elrod
-- category:
build-type:          Simple
cabal-version:       >=1.10

executable mixxxcsvlist
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >= 4 && < 5
                     , bytestring >= 0.10 && < 1
                     , cassava >= 0.4 && < 1
                     , split
                     , time
                     , time-units
                     , vector
  hs-source-dirs:      src
  default-language:    Haskell2010
